fixed mobile falling off screen

--- a/assets/css/2-base/_navigation.sass
+++ b/assets/css/2-base/_navigation.sass
@@ -180,14 +180,14 @@ nav
 
   ~ .navigation.active
     width: 100%
+    height: auto
 
     @media (max-width: $tablet-big)
       padding-top: 10rem
       background: rgba(#FFF, 0.5)
-      position: fixed
+      position: absolute
       top: 0
       left: 0
-      bottom: 0
       right: 0
 
     .links li
